move NextRelease up

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,8 @@ name = Dist-Zilla-Plugin-Prereqs-FromCPANfile
 ; use perl-reversion before making a release
 [VersionFromModule]
 
+[NextRelease] ; should be before Git::Commit
+
 ; Make the git repo installable
 [Git::GatherDir]
 exclude_filename = Build.PL
@@ -45,5 +47,4 @@ location = root
 [CheckChangesHasContent]
 [TestRelease]
 [ConfirmRelease]
-[NextRelease]
 [UploadToCPAN]
